--- a/package.json
+++ b/package.json
@@ -18,16 +18,15 @@
   "homepage": "https://github.com/joeybiotti/toc_webpage#readme",
   "dependencies": {},
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
     "bootstrap": "^4.1.3",
     "browser-sync": "^2.24.6",
     "eslint": "^5.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-eslint": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.1",
     "jquery": "^3.3.1",
     "sass": "^1.10.3"
   }
